# ynab-export

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
data/: schema.sql
src/: main.rs
