[package]
name = "ynab-export"
version = "0.0.3"
authors = ["Jesse Luehrs <doy@tozt.net>"]
edition = "2018"
description = "ynab-export is a tool to help export a YNAB budget to a database"
repository = "https://git.tozt.net/ynab-export"
license = "MIT"

[dependencies]
directories = "2"
ynab-api = "2"
